<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_txtv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/main_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/main_txtv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname" />

    <EditText
        android:id="@+id/main_edit_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/main_txtv_brindex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brindex" />

    <EditText
        android:id="@+id/main_edit_brindex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/main_txtv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/main_edit_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.66" >

        <Button
            android:id="@+id/main_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/main_btn_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="54dp"
            android:layout_toRightOf="@+id/main_btn_save"
            android:text="@string/view" />
    </RelativeLayout>

</LinearLayout>